// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiledBlock should handle size prop 1`] = `
<div>
  <div
    class="root size-s no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FiledBlock should handle size prop 2`] = `
<div>
  <div
    class="root size-s no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FiledBlock should handle size prop 3`] = `
<div>
  <div
    class="root size-l no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FiledBlock should render adornments 1`] = `
<div>
  <div
    class="root size-l no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FiledBlock should render adornments 2`] = `
<div>
  <div
    class="root size-l no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col adornment-col start"
        data-testid="field:adornment-start"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M6 2a1 1 0 011-1h7a1 1 0 011 1v7a1 1 0 11-2 0V3H7a1 1 0 01-1-1zM2 5a1 1 0 011-1h8a1 1 0 011 1v8.5a1 1 0 01-1 1H3a1 1 0 01-1-1V5zm2 1v6.5h6V6H4z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FiledBlock should render adornments 3`] = `
<div>
  <div
    class="root size-l no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col adornment-col start"
        data-testid="field:adornment-start"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M6 2a1 1 0 011-1h7a1 1 0 011 1v7a1 1 0 11-2 0V3H7a1 1 0 01-1-1zM2 5a1 1 0 011-1h8a1 1 0 011 1v8.5a1 1 0 01-1 1H3a1 1 0 01-1-1V5zm2 1v6.5h6V6H4z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
      <div
        class="col adornment-col end"
        data-testid="field:adornment-end"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M9 11a1 1 0 11-2 0 1 1 0 012 0z"
          />
          <path
            clip-rule="evenodd"
            d="M4 6V4a4 4 0 118 0v2a3 3 0 013 3v4a3 3 0 01-3 3H4a3 3 0 01-3-3V9a3 3 0 013-3zm2-2a2 2 0 114 0v2H6V4zM4 8a1 1 0 00-1 1v4a1 1 0 001 1h8a1 1 0 001-1V9a1 1 0 00-1-1H4z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`FiledBlock should render caption 1`] = `
<div>
  <div
    class="root size-l no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FiledBlock should render caption 2`] = `
<div>
  <div
    class="root size-l no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
    </div>
    <div
      class="caption"
      data-testid="field:caption"
    >
      Some caption
    </div>
  </div>
</div>
`;

exports[`FiledBlock should renders correctly 1`] = `
<div>
  <div
    class="root size-l no-label"
    data-testid="field"
  >
    <div
      class="block fixed-height"
      data-testid="field:block"
    >
      <div
        class="col main-col"
      >
        <div
          class="main"
          data-testid="field:main"
        />
      </div>
    </div>
  </div>
</div>
`;
